--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5,21 +5,34 @@ body {
   background-color: whitesmoke;
 }
 .container {
-padding-left: 0;
-padding-right: 0;
+  padding-left: 0;
+  padding-right: 0;
 }
 /* <----------------------HangedPicture Componenets style-----------------------> */
 img {
   border: 1px solid lightgrey;
 }
+/* Clue button style */
+.clue-button {
+  border-style: none;
+  background-color: #3f51b5;
+  color: white;
+  border-radius: 10px;
+  padding: 1rem;
+  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
+    0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+  &:disabled {
+    font-weight: bold;
+    color: white;
+    background-color: #388e3c;
+  }
+}
 /* <----------------------GuessWord Componenets style-----------------------> */
 .crypted-word {
-  font-size: 2rem;
   font-weight: bolder;
-  width: 2rem;
-  height: 2rem;
-  margin: 0.5rem;
-  border-radius: 12%;
+  font-size: 1rem;
+  font-weight: bolder;
+  margin: 0.2rem;
 }
 .letters {
   border-style: none;
